--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-  
+  <header>
+    <a href="#about" class="skip-link">Skip to the main content.</a>
+      <nav>
+          <a href="#">Planted</a>
+          <ul>
+
+          </ul>
+      </nav>
+  </header>
 </body>
 </html>
