--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planted</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
   <header>
     <a href="#about" class="skip-link">Skip to the main content.</a>
-      <nav>
-          <a href="#">Planted</a>
-          <ul>
-
-          </ul>
-      </nav>
+    <div class="wrapper">
+        <a href="#" class="logo">Planted</a>
+        <nav>
+        
+        </nav>
+    </div>
+      
   </header>
 </body>
 </html>
