added navbar and hero text

--- a/index.html
+++ b/index.html
@@ -8,24 +8,21 @@
     <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
-  <header>
+  <header class="header">
     <a href="#about" class="skip-link">Skip to the main content.</a>
-<<<<<<< HEAD
     <div class="wrapper">
-        <a href="#" class="logo">Planted</a>
-        <nav>
-        
-        </nav>
+       <nav class="navbar">
+           <a href="#" class="navbar__logo">Planted</a>
+           <ul class="navbar__items">
+               <li><a href="">HOME</a></li>
+               <li><a href="">ABOUT</a></li>
+               <li><a href="">BLOG</a></li>
+               <li><a href="">CONTACT</a></li>
+           </ul>
+       </nav>
+       <h1 class="heroText">Planted <span>invitation</span></h1>
     </div>
       
-=======
-      <nav>
-          <a href="#">Planted</a>
-          <ul>
-
-          </ul>
-      </nav>
->>>>>>> c143f8a8ccee2f45a3538eb97567c5555afb3756
   </header>
 </body>
 </html>
