parsed layout file and finished header

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
            </ul>
        </nav>
        <h1 class="heroText">Planted <span>invitation</span></h1>
-    </div>
-      
+       <div class="heroImg">
+           <img src="./planted-final-assets/header-box.jpg" alt="image of eucalyptus leaves">
+       </div>
+    </div>   
   </header>
 </body>
 </html>
