added about section

--- a/index.html
+++ b/index.html
@@ -26,5 +26,17 @@
        </div>
     </div>   
   </header>
+
+  <main>
+    <section class="about">
+        <div class="wrapper">
+            <div class="about__text">
+                <h2>What is Planted?</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis qui asperiores culpa pariatur illum quia iure odit, nemo soluta sapiente laboriosam labore facere doloremque incidunt placeat sint vitae laudantium eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora omnis pariatur distinctio fugiat quam, reiciendis.</p>
+                <a class="btn" href="">Find Out More</a>
+            </div>
+        </div>
+    </section>
+  </main>
 </body>
 </html>
