added workshop section

--- a/index.html
+++ b/index.html
@@ -34,6 +34,19 @@
             </div>
         </div>
     </section>
+
+    <section class="workshop">
+      <div class="wrapper">
+        <div class="workshop__img">
+          <img src="./planted-final-assets/left-flowers.jpg" alt="a picture of beautiful flowers">
+        </div>
+        <div class="workshop__text">
+          <h2>Upcoming workshops</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, adipisci quos inventore nulla explicabo iste temporibus reiciendis? Atque animi labore aliquam nobis, dolor voluptas, illum repellat exercitationem, eveniet iusto aliquid.</p>
+          <a href="#" class="btn">Read More</a>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
