--- a/index.html
+++ b/index.html
@@ -36,28 +36,31 @@
     </section>
 
     <section class="workshop">
-      <div class="wrapper">
-        <div class="workshop__container">
-          <div class="workshop__img">
-            <img src="./planted-final-assets/left-flowers.jpg" alt="a picture of beautiful flowers">
-          </div>
-          <div class="workshop__text">
-            <h2>Upcoming workshops</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, adipisci quos inventore nulla explicabo iste temporibus reiciendis? Atque animi labore aliquam nobis, dolor voluptas, illum repellat exercitationem, eveniet iusto aliquid.</p>
-            <a href="#" class="btn">Read More</a>
-          </div>
+      <div class="container-left">
+        <div class="container-left__img">
+          <img src="./planted-final-assets/left-flowers.jpg" alt="a picture of beautiful flowers">
         </div>
-        <div class="discover__container">
-          <div class="discover__img">
-            <img src="./planted-final-assets/right-flowers.jpg" alt="a picture of green flowers">
-          </div>
-          <div class="discover__text">
-            <h2>Unique plants to discover</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis non nam deleniti ab magnam atque error eligendi. Eaque beatae debitis laboriosam est omnis atque, culpa voluptatem blanditiis dolor similique veniam?</p>
-            <a href="#" class="btn">Read More</a>
-          </div>
+        <div class="container-left__text">
+          <h2 class="mb-1">Unique plants to discover</h2>
+          <p class="mb-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis non nam deleniti ab magnam atque error eligendi. Eaque beatae debitis laboriosam est omnis atque, culpa voluptatem blanditiis dolor similique.</p>
+          <a href="#" class="btn">Read More</a>
         </div>
       </div>
+
+      <div class="container-right">
+        <div class="container-right__text">
+          <h2 class="mb-1">Upcoming workshops</h2>
+          <p class="mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, adipisci quos inventore nulla explicabo iste temporibus reiciendis? Atque animi labore aliquam nobis, dolor voluptas.</p>
+          <a href="#" class="btn">Read More</a>
+        </div>
+        <div class="container-right__img">
+          <img src="./planted-final-assets/right-flowers.jpg" alt="a picture of green flowers">
+        </div>
+      </div>
+    </section>
+
+    <section class="feature">
+
     </section>
   </main>
 </body>
