completed feature section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planted</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
@@ -60,7 +61,41 @@
     </section>
 
     <section class="feature">
-
+      <div class="wrapper">
+        <div class="container">
+          <ul>
+            <li>
+              <div class="feature__heading">
+                <i class="fas fa-leaf"></i>
+                <h2 class="mb-1">Green houses</h2>
+              </div>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam qui dolorum ex voluptatum ipsam autem sequi ad ipsum sed magnam sit iste repudiandae sapiente.</p>
+            </li>
+            <li>
+              <div class="feature__heading">
+                <i class="fas fa-users"></i>
+                <h2 class="mb-1">Community</h2>
+              </div>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam qui dolorum ex voluptatum ipsam autem sequi ad ipsum sed magnam sit iste repudiandae sapiente.</p>
+            </li>
+            <li>
+              <div class="feature__heading">
+                <i class="fas fa-file"></i>
+                <h2 class="mb-1">Blog</h2>
+              </div>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam qui dolorum ex voluptatum ipsam autem sequi ad ipsum sed magnam sit iste repudiandae sapiente.</p>
+            </li>
+            <li>
+              <div class="feature__heading">
+                <i class="fas fa-phone"></i>
+                <h2 class="mb-1">Get in Touch</h2>
+              </div>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam qui dolorum ex voluptatum ipsam autem sequi ad ipsum sed magnam sit iste repudiandae sapiente.</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+      
     </section>
   </main>
 </body>
