completed founder and gallery section

--- a/index.html
+++ b/index.html
@@ -95,8 +95,34 @@
           </ul>
         </div>
       </div>
-      
     </section>
+
+    <section class="banner">
+    </section>
+
+    <section class="founder">
+      <div class="wrapper">
+        <div class="founder__img">
+          <img src="./planted-final-assets/founder.jpg" alt="a photo of a founder">
+        </div>
+        <div class="founder__text">
+          <h2 class="mb-1">Planted's founder</h2>
+          <p class="mb-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit adipisci deserunt, optio, tenetur sapiente ad nesciunt nihil tempore sit culpa esse eos assumenda. Sapiente animi molestias exercitationem, a corrupti tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas quae aspernatur tenetur sed ad impedit, perspiciatis molestiae ducimus quasi eius recusandae veniam atque laborum. </p>
+          <a href="#" class="btn">Find Out More</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="gallery">
+      <div class="wrapper">
+        <ul>
+          <li><img src="./planted-final-assets/gallery-image-1.jpg" alt="a photo of greenhouse"></li>
+          <li><img src="./planted-final-assets/gallery-image-2.jpg" alt="a photo of multiple succulents"></li>
+          <li><img src="./planted-final-assets/gallery-image-3.jpg" alt="a photo of number of small potted cactus"></li>
+        </ul>
+      </div>
+    </section>
+    <footer>Copyright &#169 2021 Juno College</footer>
   </main>
 </body>
 </html>
