--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
        <nav class="navbar">
            <a href="#" class="navbar__logo">Planted</a>
            <ul class="navbar__items">
-               <li><a href="">HOME</a></li>
-               <li><a href="">ABOUT</a></li>
-               <li><a href="">BLOG</a></li>
-               <li><a href="">CONTACT</a></li>
+               <li><a href="#">HOME</a></li>
+               <li><a href="#about">ABOUT</a></li>
+               <li><a href="#blog">BLOG</a></li>
+               <li><a href="./contact.html">CONTACT</a></li>
            </ul>
        </nav>
        <h1 class="heroText">Planted <span>invitation</span></h1>
@@ -26,7 +26,7 @@
   </header>
 
   <main>
-    <section class="about">
+    <section class="about" id="about">
         <div class="wrapper">
             <div class="about__text">
                 <h2>What is Planted?</h2>
