--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
            <ul class="navbar__items">
                <li><a href="#">HOME</a></li>
                <li><a href="#about">ABOUT</a></li>
-               <li><a href="#blog">BLOG</a></li>
+               <li><a href="./blog.html">BLOG</a></li>
                <li><a href="./contact.html">CONTACT</a></li>
            </ul>
        </nav>
