added header to blog page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
-  <header class="header">
+  <header class="header__home">
     <a href="#about" class="skip-link">Skip to the main content.</a>
     <div class="wrapper">
        <nav class="navbar">
@@ -17,8 +17,8 @@
            <ul class="navbar__items">
                <li><a href="#">HOME</a></li>
                <li><a href="#about">ABOUT</a></li>
-               <li><a href="./blog.html">BLOG</a></li>
-               <li><a href="./contact.html">CONTACT</a></li>
+               <li><a href="./html/blog.html">BLOG</a></li>
+               <li><a href="./html/contact.html">CONTACT</a></li>
            </ul>
        </nav>
        <h1 class="heroText">Planted <span>invitation</span></h1>
