linked navigation to other web pages

--- a/html/blog.html
+++ b/html/blog.html
@@ -15,8 +15,8 @@
             <nav class="navbar">
                 <a href="#" class="navbar__logo">Planted</a>
                 <ul class="navbar__items">
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="..">ABOUT</a></li>
+                    <li><a href="../index.html">HOME</a></li>
+                    <li><a href="../index.html#about">ABOUT</a></li>
                     <li><a href="./blog.html">BLOG</a></li>
                     <li><a href="./contact.html">CONTACT</a></li>
                 </ul>
@@ -24,5 +24,8 @@
            <h1 class="blogHeader__heading">Blog</h1>
         </div>
     </header>
+    <main class="blog">
+
+    </main>
 </body>
 </html>
