added html structure for comment section of the article section

--- a/html/blog.html
+++ b/html/blog.html
@@ -25,7 +25,60 @@
         </div>
     </header>
     <main class="blog">
-
+        <aside class="blog__aside">
+            <div class="blog__aside__img">
+                <img src="../planted-final-assets/side-bar-image.jpg" alt="a photo of old wall with a wooden window">
+            </div>
+            <div class="blog__aside__text">
+                <div class="blog__aside__text-top">
+                    <h3>About Planted</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate soluta, distinctio, dolore commodi voluptatem consequatur illo velit cumque accusamus. <a href="#">Find out more.</a></p>
+                </div>
+                <div class="blog__aside__text-bottom">
+                    <h3>Recent Posts</h3>
+                    <ul>
+                        <li>Lorem ipsum dolor</li>
+                        <li>sit amet consectetur </li>
+                        <li>molestiae recusandae</li>
+                        <li>provident nesciunt non</li>
+                    </ul>
+                </div>
+            </div>
+        </aside>
+        <article class="blog__article">
+            <div class="blog__article__img">
+                <img src="../planted-final-assets/post-image.jpg" alt="an aesthetic photo of green leaves">
+            </div>
+            <div class="blog__article__text">
+                <div class="blog__article__text-heading">
+                    <h2>Our mission at Planted</h2>
+                    <p>Monday January 21th, 2019 by Yousra</p>
+                </div>
+                <div class="blog__article__text-p">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae accusamus earum assumenda quam nemo at esse a! Vero molestias enim libero cupiditate voluptate praesentium optio quibusdam repellendus? Inventore, sint odio.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet iusto corrupti corporis laboriosam maxime, maiores temporibus accusantium pariatur illum, ducimus aut quam voluptatibus assumenda earum fugiat repellat repellendus deserunt expedita?</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo delectus reiciendis enim, eveniet itaque vel ipsa quaerat. Ratione cupiditate, in quas sapiente repellendus nam neque, distinctio quia doloribus recusandae fuga! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas laborum maxime ex rem quia cumque ipsa, dolor numquam tenetur aspernatur ad cupiditate libero distinctio veniam eaque maiores! Voluptas, quidem sapiente. Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quae minus cum amet iste dignissimos harum aut aliquid nihil tempore, ducimus fugit non eveniet cumque adipisci dolore quidem quod voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti molestiae sint fugit officia, eum quae. Sapiente mollitia numquam dolor, ullam, nemo doloribus harum id, tempore veritatis repellat quidem consequuntur eaque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur eveniet nostrum, quidem eius molestias possimus et fugiat velit iusto, officiis ipsum accusamus voluptatibus optio natus ad? Porro sunt nam ipsam?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit adipisci nisi amet illo enim ullam, suscipit placeat tempora laboriosam perferendis aperiam voluptate rerum nobis quod debitis veniam, ut mollitia ad?</p>
+                </div>
+                <div class="blog__article__comment">
+                    <h3>Comments:</h3>
+                    <div class="blog__article__comment-user">
+                        <img src="../planted-final-assets/profile-image.jpg" alt="a photo of user-male">
+                        <div class="blog__article__comment-user-text">
+                            <h4>Tuesday October 9th, 2018 by Jeremy</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio repellat corporis doloremque aspernatur, est, nisi placeat dolores iste corrupti at earum, quas quia alias cumque eos numquam ullam sed atque.</p>
+                        </div>
+                    </div>
+                    <div class="blog__article__comment-user">
+                        <img src="../planted-final-assets/profile-image-2.jpg" alt="a photo of user-female">
+                        <div class="blog__article__comment-user-text">
+                            <h4>Wednesday October 10th, 2018 by Julia</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio repellat corporis doloremque aspernatur, est, nisi placeat dolores iste corrupti at earum, quas quia alias cumque eos numquam ullam sed atque.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </article>
     </main>
 </body>
 </html>
