using relative positioning, offsetted aside on the blog page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a href="#about" class="skip-link">Skip to the main content.</a>
     <div class="wrapper">
        <nav class="navbar">
-           <a href="#" class="navbar__logo">Planted</a>
+           <a href="./index.html" class="navbar__logo">Planted</a>
            <ul class="navbar__items">
                <li><a href="#">HOME</a></li>
                <li><a href="#about">ABOUT</a></li>
