--- a/html/blog.html
+++ b/html/blog.html
@@ -13,26 +13,28 @@
         <a href="#" class="skip-link">Skip to the main content.</a>
         <div class="wrapper">
             <nav class="navbar">
-                <a href="#" class="navbar__logo">Planted</a>
+                <a href="../index.html" class="navbar__logo">Planted</a>
                 <ul class="navbar__items">
                     <li><a href="../index.html">HOME</a></li>
                     <li><a href="../index.html#about">ABOUT</a></li>
                     <li><a href="./blog.html">BLOG</a></li>
                     <li><a href="./contact.html">CONTACT</a></li>
                 </ul>
-           </nav>
-           <h1 class="blogHeader__heading">Blog</h1>
+        </nav>  
+        <h1 class="blogHeader__heading">Blog</h1>
         </div>
     </header>
+
     <main class="blog">
+
         <aside class="blog__aside">
             <div class="blog__aside__img">
-                <img src="../planted-final-assets/side-bar-image.jpg" alt="a photo of old wall with a wooden window">
+                <img src="../planted-final-assets/side-bar-image.jpg" alt="a photo of old wall with brown window">
             </div>
             <div class="blog__aside__text">
                 <div class="blog__aside__text-top">
                     <h3>About Planted</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate soluta, distinctio, dolore commodi voluptatem consequatur illo velit cumque accusamus. <a href="#">Find out more.</a></p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate soluta, distinctio, dolore commodi voluptatem. <a href="#">Find out more.</a></p>
                 </div>
                 <div class="blog__aside__text-bottom">
                     <h3>Recent Posts</h3>
@@ -45,6 +47,7 @@
                 </div>
             </div>
         </aside>
+
         <article class="blog__article">
             <div class="blog__article__img">
                 <img src="../planted-final-assets/post-image.jpg" alt="an aesthetic photo of green leaves">
