added bullets to unordered list and made them more accessible

--- a/html/blog.html
+++ b/html/blog.html
@@ -38,11 +38,11 @@
                 </div>
                 <div class="blog__aside__text-bottom">
                     <h3>Recent Posts</h3>
-                    <ul>
-                        <li>Lorem ipsum dolor</li>
-                        <li>sit amet consectetur </li>
-                        <li>molestiae recusandae</li>
-                        <li>provident nesciunt non</li>
+                    <ul role="list">
+                        <li role="listitem">Lorem ipsum dolor</li>
+                        <li role="listitem">sit amet consectetur </li>
+                        <li role="listitem">molestiae recusandae</li>
+                        <li role="listitem">provident nesciunt non</li>
                     </ul>
                 </div>
             </div>
