added border around the paragraph on the blog page

--- a/html/blog.html
+++ b/html/blog.html
@@ -63,24 +63,29 @@
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo delectus reiciendis enim, eveniet itaque vel ipsa quaerat. Ratione cupiditate, in quas sapiente repellendus nam neque, distinctio quia doloribus recusandae fuga! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas laborum maxime ex rem quia cumque ipsa, dolor numquam tenetur aspernatur ad cupiditate libero distinctio veniam eaque maiores! Voluptas, quidem sapiente. Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quae minus cum amet iste dignissimos harum aut aliquid nihil tempore, ducimus fugit non eveniet cumque adipisci dolore quidem quod voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti molestiae sint fugit officia, eum quae. Sapiente mollitia numquam dolor?</p><br>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit adipisci nisi amet illo enim ullam, suscipit placeat tempora laboriosam perferendis aperiam voluptate rerum nobis quod debitis veniam, ut mollitia ad?</p>
                 </div>
-                <div class="blog__article__comment">
+            </div>
+            <div class="blog__article__comment">
                     <h3>Comments:</h3>
                     <div class="blog__article__comment-user">
-                        <img src="../planted-final-assets/profile-image.jpg" alt="a photo of user-male">
+                        <div class="blog__article__comment-img">
+                            <img src="../planted-final-assets/profile-image.jpg" alt="a photo of user-male">
+                        </div>
                         <div class="blog__article__comment-user-text">
                             <h4>Tuesday October 9th, 2018 by Jeremy</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio repellat corporis doloremque aspernatur, est, nisi placeat dolores iste corrupti at earum, quas quia alias cumque eos numquam ullam sed atque.</p>
                         </div>
                     </div>
                     <div class="blog__article__comment-user">
-                        <img src="../planted-final-assets/profile-image-2.jpg" alt="a photo of user-female">
+                        <div class="blog__article__comment-img">
+                            <img src="../planted-final-assets/profile-image-2.jpg" alt="a photo of user-female">
+                        </div>
                         <div class="blog__article__comment-user-text">
                             <h4>Wednesday October 10th, 2018 by Julia</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio repellat corporis doloremque aspernatur, est, nisi placeat dolores iste corrupti at earum, quas quia alias cumque eos numquam ullam sed atque.</p>
                         </div>
                     </div>
-                </div>
             </div>
+            
         </article>
     </main>
 </body>
