added black background on the navbar of the blog

--- a/html/blog.html
+++ b/html/blog.html
@@ -11,8 +11,8 @@
 <body>
     <header class="blogHeader">
         <a href="#" class="skip-link">Skip to the main content.</a>
-        <div class="wrapper">
-            <nav class="navbar">
+        <nav class="navbar">
+            <div class="wrapper">
                 <a href="../index.html" class="navbar__logo">Planted</a>
                 <ul class="navbar__items">
                     <li><a href="../index.html">HOME</a></li>
@@ -20,9 +20,9 @@
                     <li><a href="./blog.html">BLOG</a></li>
                     <li><a href="./contact.html">CONTACT</a></li>
                 </ul>
+            </div>
         </nav>  
-        <h1 class="blogHeader__heading">Blog</h1>
-        </div>
+        <h1 class="blogHeader__heading wrapper">Blog</h1>
     </header>
 
     <main class="blog">
@@ -33,11 +33,11 @@
             </div>
             <div class="blog__aside__text">
                 <div class="blog__aside__text-top">
-                    <h3>About Planted</h3>
+                    <h2>About Planted</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate soluta, distinctio, dolore commodi voluptatem. <a href="#">Find out more.</a></p>
                 </div>
                 <div class="blog__aside__text-bottom">
-                    <h3>Recent Posts</h3>
+                    <h2>Recent Posts</h2>
                     <ul role="list">
                         <li role="listitem">Lorem ipsum dolor</li>
                         <li role="listitem">sit amet consectetur </li>
@@ -65,25 +65,25 @@
                 </div>
             </div>
             <div class="blog__article__comment">
-                    <h3>Comments:</h3>
-                    <div class="blog__article__comment-user">
-                        <div class="blog__article__comment-img">
-                            <img src="../planted-final-assets/profile-image.jpg" alt="a photo of user-male">
-                        </div>
-                        <div class="blog__article__comment-user-text">
-                            <h4>Tuesday October 9th, 2018 by Jeremy</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio repellat corporis doloremque aspernatur, est, nisi placeat dolores iste corrupti at earum, quas quia alias cumque eos numquam ullam sed atque.</p>
-                        </div>
+                <h2>Comments:</h2>
+                <div class="blog__article__comment-user">
+                    <div class="blog__article__comment-img">
+                        <img src="../planted-final-assets/profile-image.jpg" alt="a photo of user-male">
                     </div>
-                    <div class="blog__article__comment-user">
-                        <div class="blog__article__comment-img">
-                            <img src="../planted-final-assets/profile-image-2.jpg" alt="a photo of user-female">
-                        </div>
-                        <div class="blog__article__comment-user-text">
-                            <h4>Wednesday October 10th, 2018 by Julia</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio repellat corporis doloremque aspernatur, est, nisi placeat dolores iste corrupti at earum, quas quia alias cumque eos numquam ullam sed atque.</p>
-                        </div>
+                    <div class="blog__article__comment-user-text">
+                        <h3>Tuesday October 9th, 2018 by Jeremy</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio repellat corporis doloremque aspernatur, est, nisi placeat dolores iste corrupti at earum, quas quia alias cumque eos numquam ullam sed atque.</p>
                     </div>
+                </div>
+                <div class="blog__article__comment-user">
+                    <div class="blog__article__comment-img">
+                        <img src="../planted-final-assets/profile-image-2.jpg" alt="a photo of user-female">
+                    </div>
+                    <div class="blog__article__comment-user-text">
+                        <h3>Wednesday October 10th, 2018 by Julia</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio repellat corporis doloremque aspernatur, est, nisi placeat dolores iste corrupti at earum, quas quia alias cumque eos numquam ullam sed atque.</p>
+                    </div>
+                </div>
             </div>
             
         </article>
