--- a/html/blog.html
+++ b/html/blog.html
@@ -84,9 +84,21 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio repellat corporis doloremque aspernatur, est, nisi placeat dolores iste corrupti at earum, quas quia alias cumque eos numquam ullam sed atque.</p>
                     </div>
                 </div>
+
+                <form action="">
+                    <fieldset>
+                        <label for="name">Name</label>
+                        <input type="text" id="name" placeholder="name">
+                        <label for="email">Email Address</label>
+                        <input type="email" id="email" placeholder="Email address">
+                        <label for="comment">Comment</label>
+                        <textarea name="comment" id="comment" cols="30" rows="10">Comment</textarea>
+                    </fieldset>
+                </form>
             </div>
             
         </article>
     </main>
+    <footer>Copyright &#169 2021 Juno College</footer>
 </body>
 </html>
