--- a/html/blog.html
+++ b/html/blog.html
@@ -85,14 +85,17 @@
                     </div>
                 </div>
 
-                <form action="">
+                <form action="" class="blog__article__form">
                     <fieldset>
-                        <label for="name">Name</label>
-                        <input type="text" id="name" placeholder="name">
-                        <label for="email">Email Address</label>
-                        <input type="email" id="email" placeholder="Email address">
-                        <label for="comment">Comment</label>
-                        <textarea name="comment" id="comment" cols="30" rows="10">Comment</textarea>
+                        <div class="blog__article__form-container">
+                            <label for="name" class="sr-only">Name</label>
+                            <input type="text" id="name" placeholder="name">
+                            <label for="email" class="sr-only">Email Address</label>
+                            <input type="email" id="email" placeholder="Email address">
+                        </div>
+                        <label for="comment" class="sr-only">Comment</label>
+                        <input type="text" id="comment" placeholder="Comment">
+                        <button type="submit" class="btn">Post Comment</button>
                     </fieldset>
                 </form>
             </div>
