added form styling on blog page and removed borderline from the btn hover effect

--- a/html/blog.html
+++ b/html/blog.html
@@ -89,12 +89,14 @@
                     <fieldset>
                         <div class="blog__article__form-container">
                             <label for="name" class="sr-only">Name</label>
-                            <input type="text" id="name" placeholder="name">
+                            <input type="text" id="name" placeholder="Name">
+
                             <label for="email" class="sr-only">Email Address</label>
                             <input type="email" id="email" placeholder="Email address">
                         </div>
                         <label for="comment" class="sr-only">Comment</label>
-                        <input type="text" id="comment" placeholder="Comment">
+                        <textarea name="comment" id="comment" cols="20" rows="10" placeholder="Comment"></textarea>
+
                         <button type="submit" class="btn">Post Comment</button>
                     </fieldset>
                 </form>
