modifiied class name for form to make it reusable

--- a/html/blog.html
+++ b/html/blog.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="blogHeader">
-        <a href="#" class="skip-link">Skip to the main content.</a>
+        <a href="#main" class="skip-link">Skip to the main content.</a>
         <nav class="navbar">
             <div class="wrapper">
                 <a href="../index.html" class="navbar__logo">Planted</a>
@@ -25,7 +25,7 @@
         <h1 class="blogHeader__heading wrapper">Blog</h1>
     </header>
 
-    <main class="blog">
+    <main class="blog" id="main">
 
         <aside class="blog__aside">
             <div class="blog__aside__img">
@@ -85,9 +85,9 @@
                     </div>
                 </div>
 
-                <form action="" class="blog__article__form">
+                <form action="" class="form">
                     <fieldset>
-                        <div class="blog__article__form-container">
+                        <div class="form-container">
                             <label for="name" class="sr-only">Name</label>
                             <input type="text" id="name" placeholder="Name">
 
