added html and stylesheet for contact page

--- a/html/blog.html
+++ b/html/blog.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
-    <header class="blogHeader">
+    <header class="header">
         <a href="#main" class="skip-link">Skip to the main content.</a>
         <nav class="navbar">
             <div class="wrapper">
@@ -22,7 +22,7 @@
                 </ul>
             </div>
         </nav>  
-        <h1 class="blogHeader__heading wrapper">Blog</h1>
+        <h1 class="header__heading wrapper">Blog</h1>
     </header>
 
     <main class="blog" id="main">
