--- a/html/contact.html
+++ b/html/contact.html
@@ -4,14 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body {
-            background: red;
-        }
-    </style>
+    <title>Planted - Contact</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
-    
+    <header class="contactHeader">
+        <a href="#main" class="skip-link">Skip to the main content.</a>
+        <nav class="navbar">
+            <div class="wrapper">
+                <a href="../index.html" class="navbar__logo">Planted</a>
+                <ul class="navbar__items">
+                    <li><a href="../index.html">HOME</a></li>
+                    <li><a href="../index.html#about">ABOUT</a></li>
+                    <li><a href="./blog.html">BLOG</a></li>
+                    <li><a href="./contact.html">CONTACT</a></li>
+                </ul>
+            </div>
+        </nav>  
+        <h1 class="blogHeader__heading wrapper">Blog</h1>
+    </header>
 </body>
 </html>
