fixed h2 styling inside aside on blog page

--- a/html/contact.html
+++ b/html/contact.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../styles/main.css">
 </head>
-<body>
-    <header class="contactHeader">
+<body class="contact">
+    <header class="header">
         <a href="#main" class="skip-link">Skip to the main content.</a>
         <nav class="navbar">
             <div class="wrapper">
@@ -22,7 +22,7 @@
                 </ul>
             </div>
         </nav>  
-        <h1 class="blogHeader__heading wrapper">Blog</h1>
+        <h1 class="header__heading wrapper">Get in <span>Touch</span></h1>
     </header>
 </body>
 </html>
