added header to contact page

--- a/html/contact.html
+++ b/html/contact.html
@@ -24,5 +24,15 @@
         </nav>  
         <h1 class="header__heading wrapper">Get in <span>Touch</span></h1>
     </header>
+    <main>
+        <div class="socialIcons">
+            <ul>
+                <li><a class="fab fa-facebook-f" href="facebook.com"></a></li>
+                <li><a class="fab fa-instagram" href="instagram.com"></a></li>
+                <li><a class="fab fa-linkedin-in" href="linkedin.com"></a></li>
+                <li><a class="fab fa-twitter" href="twitter.com"></a></li>
+            </ul>
+        </div>
+    </main>
 </body>
 </html>
