aded footer to contact page

--- a/html/contact.html
+++ b/html/contact.html
@@ -58,7 +58,7 @@
                 </fieldset>
             </form>
         </div>
-        
     </main>
+    <footer>Copyright &#169 2021 Juno College</footer>
 </body>
 </html>
