added contactInfo and modified styling for form for contact page

--- a/html/contact.html
+++ b/html/contact.html
@@ -24,7 +24,7 @@
         </nav>  
         <h1 class="header__heading wrapper">Get in <span>Touch</span></h1>
     </header>
-    <main class="contact">
+    <main class="mainContact">
         <div class="wrapper">
             <div class="contact__container">
                 <div class="socialIcons">
@@ -35,13 +35,16 @@
                         <li><a class="fab fa-twitter" href="twitter.com"></a></li>
                     </ul>
                 </div>
+
                 <div class="contactInfo">
-                    <h3>CONTACT</h3>
-                    <a href="mailto:info@email.com">info@email.com</a>
-                    <a href="tel:1234567890">123-456-7890</a>
-                    <p>123 some road, <span>Toronto, ON</span></p>
+                    <div class="contactInfo-links">
+                        <a href="mailto:info@email.com">info@email.com</a>
+                        <a href="tel:1234567890">123-456-7890</a>
+                    </div>
+                    <p>123 Queen Street West, Unit 10 <span>Toronto, Ontario</span><span>M5V2D5</span></p>
                 </div>
             </div>
+
             <form action="" class="form">
                 <fieldset>
                     <div class="form-container">
