fixed social icons and added links to them

--- a/html/contact.html
+++ b/html/contact.html
@@ -29,10 +29,10 @@
             <div class="contact__container">
                 <div class="socialIcons">
                     <ul>
-                        <li><a class="fab fa-facebook-f" href="facebook.com"></a></li>
-                        <li><a class="fab fa-instagram" href="instagram.com"></a></li>
-                        <li><a class="fab fa-linkedin-in" href="linkedin.com"></a></li>
-                        <li><a class="fab fa-twitter" href="twitter.com"></a></li>
+                        <li><a class="fab fa-facebook-f" href="https://www.facebook.com/"></a></li>
+                        <li><a class="fab fa-instagram" href="https://www.instagram.com/"></a></li>
+                        <li><a class="fab fa-linkedin-in" href="https://www.linkedin.com/"></a></li>
+                        <li><a class="fab fa-twitter" href="https://twitter.com/?lang=en"></a></li>
                     </ul>
                 </div>
 
@@ -55,7 +55,7 @@
                         <input type="email" id="email" placeholder="Email address">
                     </div>
                     <label for="comment" class="sr-only">Comment</label>
-                    <textarea name="comment" id="comment" cols="20" rows="10" placeholder="Comment"></textarea>
+                    <textarea name="comment" id="comment" cols="20" rows="10" placeholder="Message"></textarea>
 
                     <button type="submit" class="btn">Post Comment</button>
                 </fieldset>
