organized html files and scss files

--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planted</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
   <header class="header__home">
@@ -17,8 +17,8 @@
            <ul class="navbar__items">
                <li><a href="#">HOME</a></li>
                <li><a href="#about">ABOUT</a></li>
-               <li><a href="./html/blog.html">BLOG</a></li>
-               <li><a href="./html/contact.html">CONTACT</a></li>
+               <li><a href="./blog.html">BLOG</a></li>
+               <li><a href="./contact.html">CONTACT</a></li>
            </ul>
        </nav>
        <h1 class="heroText">Planted <span>invitation</span></h1>
@@ -39,7 +39,7 @@
     <section class="workshop">
       <div class="container-left">
         <div class="container-left__img">
-          <img src="./planted-final-assets/left-flowers.jpg" alt="a picture of beautiful flowers">
+          <img src="../planted-final-assets/left-flowers.jpg" alt="a picture of beautiful flowers">
         </div>
         <div class="container-left__text">
           <h2 class="mb-1">Unique plants to discover</h2>
@@ -55,7 +55,7 @@
           <a href="#" class="btn">Read More</a>
         </div>
         <div class="container-right__img">
-          <img src="./planted-final-assets/right-flowers.jpg" alt="a picture of green flowers">
+          <img src="../planted-final-assets/right-flowers.jpg" alt="a picture of green flowers">
         </div>
       </div>
     </section>
@@ -103,7 +103,7 @@
     <section class="founder">
       <div class="wrapper">
         <div class="founder__img">
-          <img src="./planted-final-assets/founder.jpg" alt="a photo of a founder">
+          <img src="../planted-final-assets/founder.jpg" alt="a photo of a founder">
         </div>
         <div class="founder__text">
           <h2 class="mb-1">Planted's founder</h2>
@@ -116,9 +116,9 @@
     <section class="gallery">
       <div class="wrapper">
         <ul>
-          <li><img src="./planted-final-assets/gallery-image-1.jpg" alt="a photo of greenhouse"></li>
-          <li><img src="./planted-final-assets/gallery-image-2.jpg" alt="a photo of multiple succulents"></li>
-          <li><img src="./planted-final-assets/gallery-image-3.jpg" alt="a photo of number of small potted cactus"></li>
+          <li><img src="../planted-final-assets/gallery-image-1.jpg" alt="a photo of greenhouse"></li>
+          <li><img src="../planted-final-assets/gallery-image-2.jpg" alt="a photo of multiple succulents"></li>
+          <li><img src="../planted-final-assets/gallery-image-3.jpg" alt="a photo of number of small potted cactus"></li>
         </ul>
       </div>
     </section>
