--- a/html/blog.html
+++ b/html/blog.html
@@ -13,10 +13,10 @@
         <a href="#main" class="skip-link">Skip to the main content.</a>
         <nav class="navbar">
             <div class="wrapper">
-                <a href="../index.html" class="navbar__logo">Planted</a>
+                <a href="./index.html" class="navbar__logo">Planted</a>
                 <ul class="navbar__items">
-                    <li><a href="../index.html">HOME</a></li>
-                    <li><a href="../index.html#about">ABOUT</a></li>
+                    <li><a href="./index.html">HOME</a></li>
+                    <li><a href="./index.html#about">ABOUT</a></li>
                     <li><a href="./blog.html">BLOG</a></li>
                     <li><a href="./contact.html">CONTACT</a></li>
                 </ul>
