--- a/html/index.html
+++ b/html/index.html
@@ -20,6 +20,7 @@
                <li><a href="./blog.html">BLOG</a></li>
                <li><a href="./contact.html">CONTACT</a></li>
            </ul>
+           <i class="fa fa-bars"></i>
        </nav>
        <h1 class="heroText">Planted <span>invitation</span></h1>
     </div>   
