git hosting test

--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planted</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
   <header class="header__home">
     <a href="#about" class="skip-link">Skip to the main content.</a>
     <div class="wrapper">
        <nav class="navbar">
-           <a href="./index.html" class="navbar__logo">Planted</a>
+           <a href="index.html" class="navbar__logo">Planted</a>
            <ul class="navbar__items">
                <li><a href="#">HOME</a></li>
                <li><a href="#about">ABOUT</a></li>
-               <li><a href="./blog.html">BLOG</a></li>
-               <li><a href="./contact.html">CONTACT</a></li>
+               <li><a href="./html/blog.html">BLOG</a></li>
+               <li><a href="./html/contact.html">CONTACT</a></li>
            </ul>
            <i class="fa fa-bars"></i>
        </nav>
