--- a/html/blog.html
+++ b/html/blog.html
@@ -15,8 +15,8 @@
             <div class="wrapper">
                 <a href="./index.html" class="navbar__logo">Planted</a>
                 <ul class="navbar__items">
-                    <li><a href="./index.html">HOME</a></li>
-                    <li><a href="./index.html#about">ABOUT</a></li>
+                    <li><a href="../index.html">HOME</a></li>
+                    <li><a href="../index.html#about">ABOUT</a></li>
                     <li><a href="./blog.html">BLOG</a></li>
                     <li><a href="./contact.html">CONTACT</a></li>
                 </ul>
