--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section class="workshop">
       <div class="container-left">
         <div class="container-left__img">
-          <img src="../planted-final-assets/left-flowers.jpg" alt="a picture of beautiful flowers">
+          <img src="./planted-final-assets/left-flowers.jpg" alt="a picture of beautiful flowers">
         </div>
         <div class="container-left__text">
           <h2 class="mb-1">Unique plants to discover</h2>
@@ -56,7 +56,7 @@
           <a href="#" class="btn">Read More</a>
         </div>
         <div class="container-right__img">
-          <img src="../planted-final-assets/right-flowers.jpg" alt="a picture of green flowers">
+          <img src="./planted-final-assets/right-flowers.jpg" alt="a picture of green flowers">
         </div>
       </div>
     </section>
@@ -104,7 +104,7 @@
     <section class="founder">
       <div class="wrapper">
         <div class="founder__img">
-          <img src="../planted-final-assets/founder.jpg" alt="a photo of a founder">
+          <img src="./planted-final-assets/founder.jpg" alt="a photo of a founder">
         </div>
         <div class="founder__text">
           <h2 class="mb-1">Planted's founder</h2>
@@ -117,9 +117,9 @@
     <section class="gallery">
       <div class="wrapper">
         <ul>
-          <li><img src="../planted-final-assets/gallery-image-1.jpg" alt="a photo of greenhouse"></li>
-          <li><img src="../planted-final-assets/gallery-image-2.jpg" alt="a photo of multiple succulents"></li>
-          <li><img src="../planted-final-assets/gallery-image-3.jpg" alt="a photo of number of small potted cactus"></li>
+          <li><img src="./planted-final-assets/gallery-image-1.jpg" alt="a photo of greenhouse"></li>
+          <li><img src="./planted-final-assets/gallery-image-2.jpg" alt="a photo of multiple succulents"></li>
+          <li><img src="./planted-final-assets/gallery-image-3.jpg" alt="a photo of number of small potted cactus"></li>
         </ul>
       </div>
     </section>
