--- a/html/contact.html
+++ b/html/contact.html
@@ -13,7 +13,7 @@
         <a href="#main" class="skip-link">Skip to the main content.</a>
         <nav class="navbar">
             <div class="wrapper">
-                <a href="./index.html" class="navbar__logo">Planted</a>
+                <a href="../index.html" class="navbar__logo">Planted</a>
                 <ul class="navbar__items">
                     <li><a href="../index.html">HOME</a></li>
                     <li><a href="../index.html#about">ABOUT</a></li>
